test ReferenceMapFork JUnit Java 1.8